RESOLVED FIXED288543
Fix build errors in the iOS 18.4 public beta
https://bugs.webkit.org/show_bug.cgi?id=288543
Summary Fix build errors in the iOS 18.4 public beta
Elliott Williams
Reported 2025-02-25 15:14:15 PST
The public build is hitting some compiler warnings on unused variables.
Attachments
Radar WebKit Bug Importer
Comment 1 2025-02-25 15:14:25 PST
EWS
Comment 2 2025-02-25 20:03:10 PST
Committed 291087@main (acd14136fed1): <https://commits.webkit.org/291087@main> Reviewed commits have been landed. Closing PR #41350 and removing active labels.
Robert Jenner
Comment 3 2025-05-30 15:09:03 PDT
EWS
Comment 4 2025-05-30 15:12:57 PDT
Committed 289651.543@safari-7621-branch (2f0fe86b5b81): <https://commits.webkit.org/289651.543@safari-7621-branch> Reviewed commits have been landed. Closing PR #3131 and removing active labels.
Robert Jenner
Comment 5 2025-05-30 20:24:02 PDT
Reopened Bugzilla. Broke the build, tracking revert in https://bugs.webkit.org/show_bug.cgi?id=293846.
EWS
Comment 6 2025-05-30 20:44:24 PDT
Committed 289651.545@safari-7621-branch (dd8aff685e32): <https://commits.webkit.org/289651.545@safari-7621-branch> Reviewed commits have been landed. Closing PR #3134 and removing active labels.
EWS
Comment 7 2025-06-02 12:52:13 PDT
Committed 289651.549@safari-7621-branch (1a24e1e1060b): <https://commits.webkit.org/289651.549@safari-7621-branch> Reviewed commits have been landed. Closing PR #3135 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.