Fix build errors in the iOS 18.4 public beta rdar://145608331 https://bugs.webkit.org/show_bug.cgi?id=288543

Reviewed by Abrar Rahman Protyasha.

Fix a few unused variable warnings encountered while building. I'm not
sure why earlier compilers did not detect these.

* Source/WebCore/accessibility/ios/AccessibilityObjectIOS.mm:
(WebCore::attributeStringSetStyle):
* Source/WebKit/UIProcess/RemoteLayerTree/ios/RemoteLayerTreeHostIOS.mm:
(WebKit::RemoteLayerTreeHost::makeNode):
* Source/WebKit/UIProcess/ios/WKContentViewInteraction.mm:
(-[WKContentView _scaledCaretRectForSelectionStart:]):
(-[WKContentView _scaledCaretRectForSelectionEnd:]):

Canonical link: https://commits.webkit.org/291087@main