Source/WebKit/UIProcess/ios/WKContentViewInteraction.mm
@@ -6425,7 +6425,7 @@ static NSArray<WKTextSelectionRect *> *textSelectionRects(const Vector<WebCore::
     // to achieve the visual effect that the caret is narrow when zoomed in and wide
     // when zoomed out.
     double inverseScale = [self inverseScale];
-    if (bool isHorizontalCaret = caretRect.width() < caretRect.height())
+    if (caretRect.width() < caretRect.height())
         caretRect.setWidth(caretRect.width() * inverseScale);
     else
         caretRect.setHeight(caretRect.height() * inverseScale);
@@ -6438,7 +6438,7 @@ static NSArray<WKTextSelectionRect *> *textSelectionRects(const Vector<WebCore::
     // to achieve the visual effect that the caret is narrow when zoomed in and wide
     // when zoomed out.
     double inverseScale = [self inverseScale];
-    if (bool isHorizontalCaret = caretRect.width() < caretRect.height()) {
+    if (caretRect.width() < caretRect.height()) {
         float originalWidth = caretRect.width();
         caretRect.setWidth(originalWidth * inverseScale);
         caretRect.move(caretRect.width() - originalWidth, 0);
